--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,21 @@ input, select, textarea {
 		font-weight: 400;
 		line-height: 1.75em;
 	}
+	#footer .skill-icons {
+		margin-top: 1em;
+		text-align: center;
+	}
+	
+	#footer .skill-icons i {
+		font-size: 1.5em;
+		margin: 0.3em;
+		color: rgba(255, 255, 255, 0.5);
+		transition: color 0.3s ease;
+	}
+	
+	#footer .skill-icons i:hover {
+		color: #ffffff;
+	}
 
 	a {
 		-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
